--- a/.github/workflows/build-openssl.yml
+++ b/.github/workflows/build-openssl.yml
@@ -43,6 +43,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: ilammy/msvc-dev-cmd@v1
+    - name: install packages
+      run: choco install openssl
     - name: submodules
       run: git submodule update --init --recursive
     - name: cmake
