--- a/.github/workflows/build-gnutls.yml
+++ b/.github/workflows/build-gnutls.yml
@@ -16,7 +16,7 @@ jobs:
     - name: submodules
       run: git submodule update --init --recursive
     - name: cmake
-      run: cmake -B build -DUSE_JUICE=1 -DUSE_GNUTLS=1
+      run: cmake -B build -DUSE_GNUTLS=1
     - name: make
       run: (cd build; make -j2)
     - name: test
@@ -30,7 +30,7 @@ jobs:
     - name: submodules
       run: git submodule update --init --recursive
     - name: cmake
-      run: cmake -B build -DUSE_JUICE=1 -DUSE_GNUTLS=1
+      run: cmake -B build -DUSE_GNUTLS=1
     - name: make
       run: (cd build; make -j2)
     - name: test
