Replaced compilation flag USE_JUICE with USE_NICE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -194,14 +194,14 @@ endif()
 
 if (USE_NICE OR NOT USE_JUICE)
 	find_package(LibNice REQUIRED)
-	target_compile_definitions(datachannel PRIVATE USE_JUICE=0)
-	target_compile_definitions(datachannel-static PRIVATE USE_JUICE=0)
+	target_compile_definitions(datachannel PRIVATE USE_NICE=1)
+	target_compile_definitions(datachannel-static PRIVATE USE_NICE=1)
 	target_link_libraries(datachannel PRIVATE LibNice::LibNice)
 	target_link_libraries(datachannel-static PRIVATE LibNice::LibNice)
 else()
 	add_subdirectory(deps/libjuice EXCLUDE_FROM_ALL)
-	target_compile_definitions(datachannel PRIVATE USE_JUICE=1)
-	target_compile_definitions(datachannel-static PRIVATE USE_JUICE=1)
+	target_compile_definitions(datachannel PRIVATE USE_NICE=0)
+	target_compile_definitions(datachannel-static PRIVATE USE_NICE=0)
 	target_link_libraries(datachannel PRIVATE LibJuice::LibJuiceStatic)
 	target_link_libraries(datachannel-static PRIVATE LibJuice::LibJuiceStatic)
 endif()
