--- a/examples/signaling-server-rust/Cargo.toml
+++ b/examples/signaling-server-rust/Cargo.toml
@@ -1,18 +1,14 @@
 [package]
-name = "webrtc_server"
+name = "libdatachannel_signaling_server_example"
 version = "0.1.0"
-authors = ["Nico Chatzi <nico.chatzigianis@focusrite.com>"]
+authors = ["Paul-Louis Ageneau"]
 edition = "2018"
 
 [dependencies]
-rocket = "0.4.4"
-rocket_cors = "0.5.0"
-serde = "1.0"
-serde_json = "1.0"
-serde_derive = "1.0"
-bincode = "1.2.1"
+tokio = { version = "*", features = ["full"] }
+tungstenite = "*"
+tokio-tungstenite = "*"
+futures-util = "*"
+futures-channel = "*"
+json = "*"
 
-[dependencies.rocket_contrib]
-version = "0.4.4"
-default-features = false
-features = ["json"]
