Add CAPI_STDCALL in cmake as an option and definition to set the calling convention of the C callback functions __stdcall.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,12 @@ option(NO_WEBSOCKET "Disable WebSocket support" OFF)
 option(NO_EXAMPLES "Disable examples" OFF)
 option(NO_TESTS "Disable tests build" OFF)
 option(WARNINGS_AS_ERRORS "Treat warnings as errors" OFF)
+option(CAPI_STDCALL "Set calling convention of C API callbacks stdcall" OFF)
+
+message("CAPI_STDCALL: ${CAPI_STDCALL}")
+if(CAPI_STDCALL)
+	add_definitions(-DCAPI_STDCALL)
+endif()
 
 if(USE_NICE)
 	option(USE_JUICE "Use libjuice" OFF)
