Enable OpenSSL when compiling SRTP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,9 @@ if(USE_GNUTLS)
 	option(USE_NETTLE "Use Nettle in libjuice" ON)
 else()
 	option(USE_NETTLE "Use Nettle in libjuice" OFF)
+	if(NOT USE_SYSTEM_SRTP)
+		option(ENABLE_OPENSSL "Enable OpenSSL crypto engine for SRTP" ON)
+	endif()
 endif()
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
