--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -247,7 +247,10 @@ add_library(LibDataChannel::LibDataChannelStatic ALIAS datachannel-static)
 install(TARGETS datachannel LIBRARY DESTINATION lib)
 install(FILES ${LIBDATACHANNEL_HEADERS} DESTINATION include/rtc)
 
-if(NOT MSVC)
+if(MSVC)
+	target_compile_options(datachannel PRIVATE /wd4251)
+	target_compile_options(datachannel-static PRIVATE /wd4251)
+else()
 	target_compile_options(datachannel PRIVATE -Wall -Wextra)
 	target_compile_options(datachannel-static PRIVATE -Wall -Wextra)
 endif()
